html overflow rule removed, it was preventing the window scroll event to trigger. faculty directory responsiveness states incorporated

--- a/dev/styles/04-layout/_body.scss
+++ b/dev/styles/04-layout/_body.scss
@@ -11,10 +11,12 @@ body, html{
 	line-height: $leading;
 	font-family: $work-sans-stack;
 	font-weight: $regular;
-	overflow-x: hidden;
 	&.open{
 		overflow: hidden;
 	}
+}
+body{
+	overflow-x: hidden;
 }
 section{
 	position: relative;
@@ -324,7 +326,7 @@ section{
 		line-height: 1;
 		padding: 20px 0px;
 		border: 4px solid $color-turquoise-green;
-		width: 380px;
+		max-width: 380px;
 		margin:0 auto;
 		text-transform: uppercase;
 		text-align: center;
@@ -500,14 +502,20 @@ section{
 }
 #faculty-directory{
 	margin-bottom:150px;
+	& .main-wrapper{
+		display: flex;
+		flex-flow: column nowrap;
+    	align-items: center;
+	}
 	& .division{
 		margin:{
 			top: $full-column;
-			right: 2*$full-column;
-			left: 2*$full-column;
+			right: 17px;
+			left: 17px;
 		}
+		max-width: 875px;
 		& .faculty{
-			width: 400px;
+			flex-basis: 50%;
 			margin:{
 				top: 50px;
 			}
@@ -948,7 +956,7 @@ section{
 				flex-flow: row nowrap;
 				align-items: flex-end;
 				justify-content: flex-start;
-				 margin-top: -130px;
+				margin-top: -100px;
 				& > div:nth-of-type(1){
 					max-width: 693px;
 					height: 540px;
@@ -987,7 +995,7 @@ section{
 				}
 				& > div:nth-of-type(3){
 					flex:0 1 calc(100% - 560px);
-					margin-top: 60px;
+					margin-top: 90px;
 					& .slider{
 						margin: 0 auto;
 						max-width: 537px;
